# Novamind

./: .gitignore  CODEBASE_AUDIT.md  CODEBASE_SUMMARY.md  LICENSE  README.md  SETUP.md  config.py  deep-research-report.md  find_empty_funcs.py  fix_syntax.py  legacy_baseline.txt  main.py  manifest.json  proactive_scan.py  pyproject.toml  pytest.ini  requirements.txt  runtime_snapshot.json
.novamind/: memory.db  probe_memory.db
agents/: application_agent.py  browser_agent.py  code_agent.py  data_agent.py  email_agent.py  error_handler.py  error_recovery_agent.py  file_agent.py  memory_agent.py  network_agent.py  system_agent.py  verifier_agent.py
attached_assets/: Pasted--NovaMind-Final-Implementation-Plan-Based-on-Forensic-A_1778321025118.txt  Pasted--NovaMind-Full-Implementation-Plan-From-Broken-Macro-Re_1778226474719.txt  Pasted-You-are-a-ruthless-senior-systems-engineer-doing-a-fore_1778320389914.txt  Pasted-You-are-a-senior-software-architect-Perform-a-deep-exha_1778224715587.txt
core/: agent_context.py  base_agent.py  brain.py  bridge_server.py  causal_scheduler.py  effect_reconciler.py  effect_wal.py  element_finder.py  event_recorder.py  execution_sandbox.py  ipc_serializer.py  ipc_transport.py  kernel_supervisor.py  llm_router.py  os_executor.py  parallel_engine.py  perception.py  replay_engine.py  resource_governor.py  runtime_auditor.py  runtime_paths.py  runtime_store.py  runtime_supervisor.py  session_registry.py  snapshot_store.py  state_manager.py  state_snapshot.py  step_executor.py  syscall_gate.py  task_parser.py  worker_runtime.py
tests/: test.py  (+35 more)
(+162 files in other folders)
